--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
 
-
+    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/colors.css">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
