Criação e estilização dos botões CTA

--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
                     e
                     <span class="js">JavaScript</span>
                 </p>
+
+                <div class="botoes-CTA">
+
+                    <button class="botao">
+                        Ver Projetos
+                    </button>
+
+                    <button class="botao">
+                        Contato
+                    </button>
+
+                </div>
+
             </div>
 
             <div class="apresentacao-foto">
