Botão Tema do portfólio - Finalizado

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
 
+
+    
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
 
@@ -352,15 +355,12 @@
         </section>
     </nav>
 
+<script src="src/js/script.js"></script>
+
 </body>
 
-<script>
-    const botao = document.getElementById('temaToggle');
+<footer>
 
-    botao.addEventListener('click', () => {
-        botao.classList.toggle('ativo');
-    });
-
-</script>
+</footer>
 
 </html>
