Estrutura da Seção Projetos HTML - Inciada

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Meu Portfólio</title>
 
 
-    
+
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
@@ -340,13 +340,40 @@
 
                     <article class="projeto-card">
 
+                        <div class="projeto-imagem">
 
+                            <img src="src/images/projeto-portfolio.jpg" alt="Imagem exposição do projeto">
 
+                            <h1>Meu Portfólio</h1>
+                            <h1>Em desenvolvimento</h1>
+                        </div>
 
+                    </article>
 
-                        <div class="janela-modal">
+                    <article class="projeto-card">
+
+                        <div class="projeto-imagem">
+
+                            <img src="src/images/projeto-link-tree.jpg" alt="Imagem exposição do projeto">
+
+                            <h1>Link Tree Personalizado</h1>
+                            <h1>30 de Junho 2025</h1>
 
                         </div>
+
+                    </article>
+
+                    <article class="projeto-card">
+
+                        <div class="projeto-imagem">
+
+                            <img src="src/images/projeto-magickai-devemdobro.jpg" alt="Imagem exposição do projeto">
+
+                            <h1>MagickAI</h1>
+                            <h1>08 de Junho de 2025</h1>
+
+                        </div>
+
                     </article>
 
                 </div>
@@ -355,7 +382,7 @@
         </section>
     </nav>
 
-<script src="src/js/script.js"></script>
+    <script src="src/js/script.js"></script>
 
 </body>
 
