Estrutura HTML - FINALIZADA (Revisar)

--- a/index.html
+++ b/index.html
@@ -427,16 +427,16 @@
 
         </section>
 
-
-
     </nav>
 
     <script src="src/js/script.js"></script>
 
 </body>
 
-<footer>
+<div class="linhaReta"></div>
 
+<footer class="rodape">
+    <p><strong>&copy; Quase Todos Direitos Reservados - Site criado por Thiago Dev</strong></p>
 </footer>
 
 </html>
