Estilização da Seção Habilidades - WIP

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
             <div class="habilidades-container">
 
-                <div class="habilidades-tecninas">
+                <div class="habilidades-tecnicas">
 
                     <h1>Habilidades Técnicas</h1>
 
