--- a/index.html
+++ b/index.html
@@ -344,8 +344,12 @@
 
                             <img src="src/images/projeto-portfolio.jpg" alt="Imagem exposição do projeto">
 
-                            <h1>Meu Portfólio</h1>
-                            <h1>Em desenvolvimento</h1>
+                            <div class="bloco-escuro">
+
+                            </div>
+
+                            <p>Meu Portfólio</p>
+                            <p>Em desenvolvimento</p>
                         </div>
 
                     </article>
@@ -356,8 +360,8 @@
 
                             <img src="src/images/projeto-link-tree.jpg" alt="Imagem exposição do projeto">
 
-                            <h1>Link Tree Personalizado</h1>
-                            <h1>30 de Junho 2025</h1>
+                            <p>Link Tree Personalizado</p>
+                            <p>30 de Junho 2025</p>
 
                         </div>
 
@@ -369,8 +373,8 @@
 
                             <img src="src/images/projeto-magickai-devemdobro.jpg" alt="Imagem exposição do projeto">
 
-                            <h1>MagickAI</h1>
-                            <h1>08 de Junho de 2025</h1>
+                            <p>MagickAI</p>
+                            <p>08 de Junho de 2025</p>
 
                         </div>
 
@@ -385,7 +389,7 @@
 
             <div class="contatos-container">
 
-                <div class="contato-imagem">
+                <div class="contato-imagem email">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                         <path
@@ -398,7 +402,7 @@
 
                 </div>
 
-                <div class="contato-imagem">
+                <div class="contato-imagem linkedin">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                         <path
@@ -410,14 +414,8 @@
 
                 </div>
 
-                <div class="contato-imagem">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-github-icon lucide-github">
-                        <path
-                            d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4" />
-                        <path d="M9 18c-4.51 2-5-2-7-2" />
-                    </svg>
+                <div class="contato-imagem github">
+                    <svg fill="" width="800px" height="800px" viewBox="-2.5 0 19 19" xmlns="http://www.w3.org/2000/svg" class="cf-icon-svg"><path d="M9.464 17.178a4.506 4.506 0 0 1-2.013.317 4.29 4.29 0 0 1-2.007-.317.746.746 0 0 1-.277-.587c0-.22-.008-.798-.012-1.567-2.564.557-3.105-1.236-3.105-1.236a2.44 2.44 0 0 0-1.024-1.348c-.836-.572.063-.56.063-.56a1.937 1.937 0 0 1 1.412.95 1.962 1.962 0 0 0 2.682.765 1.971 1.971 0 0 1 .586-1.233c-2.046-.232-4.198-1.023-4.198-4.554a3.566 3.566 0 0 1 .948-2.474 3.313 3.313 0 0 1 .091-2.438s.773-.248 2.534.945a8.727 8.727 0 0 1 4.615 0c1.76-1.193 2.532-.945 2.532-.945a3.31 3.31 0 0 1 .092 2.438 3.562 3.562 0 0 1 .947 2.474c0 3.54-2.155 4.32-4.208 4.548a2.195 2.195 0 0 1 .625 1.706c0 1.232-.011 2.227-.011 2.529a.694.694 0 0 1-.272.587z"/></svg>
 
                     <h1>GitHub</h1>
                     <p>Thiago-Lucas-Dev</p>
