CSS: Ajustes finos e Botões - WIP (CASA)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
 
-
+    <link rel="shortcut icon" href="/src/images/favicon.ico" type="image/x-icon">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
@@ -72,11 +72,11 @@
                 <div class="botoes-CTA">
 
                     <button class="botao">
-                        Ver Projetos
+                        <a href="#projetos">Ver Projetos</a>
                     </button>
 
                     <button class="botao">
-                        Entre em contato
+                        <a href="#contato">Entre em contato</a>
                     </button>
 
                 </div>
@@ -127,7 +127,7 @@
 
                 <div class="botao-curriculo">
                     <button>
-                        Vizualizar Currículo
+                        <a href="">Vizualizar Currículo</a>
                     </button>
                 </div>
 
