CSS - Estilização completa (Ajustes finais)

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                 <div class="botao-curriculo">
                     <button>
-                        <a href="">Vizualizar Currículo</a>
+                        <a href="https://drive.google.com/file/d/1pnit-_nRwKbmtzzKg4uidI1tne4ZxDSR/view?usp=sharing" target="_blank" rel="noopener noreferrer">Vizualizar Currículo</a>
                     </button>
                 </div>
 
@@ -417,7 +417,7 @@
             <div class="contatos-container">
 
                 <div class="contato-bloco email">
-                    <a href="https://mail.google.com/mail/?view=cm&to=thiagolluccass@gmail.com" target="_blank">
+                    <a href="https://mail.google.com/mail/?view=cm&to=thiagolluccass@gmail.com" target="_blank" rel="noopener noreferrer">
 
                         <div class="contato-imagem">
 
@@ -437,7 +437,7 @@
                 </div>
 
                 <div class="contato-bloco linkedin">
-                    <a href="https://www.linkedin.com/in/thiago-lucas-moreira-de-almeida-6213b12b8" target="_blank">
+                    <a href="https://www.linkedin.com/in/thiago-lucas-moreira-de-almeida-6213b12b8" target="_blank" rel="noopener noreferrer">
                         <div class="contato-imagem">
 
 
@@ -450,13 +450,13 @@
                     </a>
 
                     <h1>Linkedin</h1>
-                    <p>Thiago-Linkedin</p>
+                    <p>Thiago Lucas Moreira de Almeida</p>
 
                 </div>
 
                 <div class="contato-bloco github">
 
-                    <a href="https://github.com/Thiago-Lucas-Dev" target="_blank">
+                    <a href="https://github.com/Thiago-Lucas-Dev" target="_blank" rel="noopener noreferrer">
                         <div class="contato-imagem">
 
                             <svg fill="" width="800px" height="800px" viewBox="-2.5 0 19 19"
